prevent wrapping of menu text

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   left: 0;
   margin: 0;
   padding: 3px 0px;
+  white-space: nowrap;
   overflow-x: hidden;
   overflow-y: auto;
   z-index: 100000;
